# fsst

./: CMakeLists.txt  README.md  TODO
benchmark/: 64int-startwith-analysis.txt  CMakeLists.txt  baseline-analysis.txt  index-analysis.txt  main.cpp
benchmark/dbtext/: chinese  japanese
src/: CMakeLists.txt
src/include/fsst/main/: fsst.h
src/main/: CMakeLists.txt  fsst.cpp
test/: CMakeLists.txt  test_symbol_table.cpp
